--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,12 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "buffer": "^6.0.3",
     "firebase": "^9.6.10",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-html-parser": "^2.0.2",
+    "react-native": "^0.68.1",
     "react-redux": "^7.2.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
